--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,9 @@
 <%= link_to 'Contact', welcome_contact_path %>
 <%= link_to 'Features', welcome_features_path %>
 <%= link_to 'FAQs', welcome_faq_path %>
-<%= link_to 'Pricing', welcome_pircing_path %>
+<%= link_to 'Pricing', welcome_pricing_path %>
 <%= link_to 'Invoices', invoices_path %>
-<%= link_to 'Login', welcome_login_path %>
+<%= link_to 'Login', welcome_about_path %>
 
 <%= yield %>
 
